tests/errors/share-range.fil
import "../../examples/sequential.fil";

comp Main<G: 10>(
  @interface[G] go_G: 1,
  @[G, G+1] l0: 32,
  @[G, G+1] r0: 32,
  @[G+9, G+10] l1: 32,
  @[G+9, G+10] r1: 32,
) -> () {
  M := new Mult[32];

  m0 := M<G>(l0, r0);
  m1 := M<G+9>(l1, r1);
}
