tests/errors/share-range.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint 10 >= max(G+2, G+11) - min(G, G+9)
   ┌─ tests/errors/share-range.fil:4:11
   │
 4 │ comp Main<G: 10>(
   │           ^^^^^ event's delay must be longer than the difference between minimum start time and maximum end time of all invocations
   ·
13 │   m0 := M<G>(l0, r0);
   │           - invocation starts at `G' and ends at `G+2'
14 │   m1 := M<G+9>(l1, r1);
   │           - invocation starts at `G+9' and ends at `G+11'
   │
   = assignment violates constraint: G=0

Compilation failed with 1 errors.
